(portal-ui) Add max tries to bench synchronization to prevent never-ending loop. Unify tooltips from CSV to TSV. Align icons in table headers.

--- a/dcc-portal-ui/src/main/js/app/styles/_base/_colours.scss
+++ b/dcc-portal-ui/src/main/js/app/styles/_base/_colours.scss
@@ -39,8 +39,12 @@ $orange: hsl(29, 97%, 41%);
 /*$mauve: hsl(300, 46%, 83%);*/
 $mauve: hsl(336, 52%, 40%);
 
-$red: #dc322f;
-$redDarker: #BB3200;
+/* $red: #dc322f; */
+/* $redDarker: #BB3200; */
+
+/* $red: hsl(1, 71%, 52%); */
+$red: hsl(12, 71%, 52%);
+$redDarker: hsl(16, 100%, 37%);
 
 $magenta: hsl(331, 64%, 52%);
 $violet: hsl(237, 43%, 60%);
