--- a/dcc-portal-ui/src/main/js/app/styles/styles.css
+++ b/dcc-portal-ui/src/main/js/app/styles/styles.css
@@ -586,45 +586,48 @@ $cyan:      #2aa198;
 $green:     #859900;
 */
 /*$mauve: hsl(300, 46%, 83%);*/
-/* line 78, _base/_colours.scss */
+/* $red: #dc322f; */
+/* $redDarker: #BB3200; */
+/* $red: hsl(1, 71%, 52%); */
+/* line 82, _base/_colours.scss */
 .light {
   background-color: white;
   color: #333333;
 }
-/* line 66, _base/_colours.scss */
+/* line 70, _base/_colours.scss */
 .light h1, .light h2, .light h3, .light h4, .light h5, .light h6 {
   color: black;
 }
-/* line 69, _base/_colours.scss */
+/* line 73, _base/_colours.scss */
 .light a, .light a:active, .light a:visited, .light code.url {
   text-decoration: none;
   color: #166aa2;
 }
-/* line 73, _base/_colours.scss */
+/* line 77, _base/_colours.scss */
 .light a:hover {
   background: rgba(230, 230, 230, 0.7);
 }
 
-/* line 82, _base/_colours.scss */
+/* line 86, _base/_colours.scss */
 .dark {
   background-color: #3f5973;
   color: white;
 }
-/* line 66, _base/_colours.scss */
+/* line 70, _base/_colours.scss */
 .dark h1, .dark h2, .dark h3, .dark h4, .dark h5, .dark h6 {
   color: white;
 }
-/* line 69, _base/_colours.scss */
+/* line 73, _base/_colours.scss */
 .dark a, .dark a:active, .dark a:visited, .dark code.url {
   text-decoration: none;
   color: #ce6503;
 }
-/* line 73, _base/_colours.scss */
+/* line 77, _base/_colours.scss */
 .dark a:hover {
   background: rgba(72, 102, 132, 0.7);
 }
 
-/* line 86, _base/_colours.scss */
+/* line 90, _base/_colours.scss */
 html * {
   color-profile: sRGB;
   rendering-intent: auto;
@@ -1694,11 +1697,11 @@ footer .dcc-col {
 }
 /* line 28, _modules/_button.scss */
 .t_button.t_button__destructive, a.t_button.t_button__destructive {
-  background: #dc322f;
+  background: #dc502e;
 }
 /* line 31, _modules/_button.scss */
 .t_button.t_button__destructive:hover, a.t_button.t_button__destructive:hover {
-  background: #bb3200;
+  background: #bd3200;
 }
 
 /* line 38, _modules/_button.scss */
@@ -1744,14 +1747,14 @@ input:focus {
 
 /* line 18, _modules/_form.scss */
 input.invalid {
-  border: 1px solid #dc322f;
+  border: 1px solid #dc502e;
 }
 /* line 21, _modules/_form.scss */
 input.invalid:focus {
-  border-color: #e35d5b;
-  -webkit-box-shadow: inset 0 1px 1px #f2f2f2, 0 0 0.5rem #dc322f;
-  -moz-box-shadow: inset 0 1px 1px #f2f2f2, 0 0 0.5rem #dc322f;
-  box-shadow: inset 0 1px 1px #f2f2f2, 0 0 0.5rem #dc322f;
+  border-color: #e37559;
+  -webkit-box-shadow: inset 0 1px 1px #f2f2f2, 0 0 0.5rem #dc502e;
+  -moz-box-shadow: inset 0 1px 1px #f2f2f2, 0 0 0.5rem #dc502e;
+  box-shadow: inset 0 1px 1px #f2f2f2, 0 0 0.5rem #dc502e;
 }
 
 /* line 27, _modules/_form.scss */
@@ -1816,29 +1819,33 @@ input.valid:focus {
   color: black;
   text-overflow: normal;
 }
-/* line 53, _modules/_tables.scss */
+/* line 57, _modules/_tables.scss */
+.table.table-selectable thead [class^="icon-"]:before, .table.table-selectable thead [class*=" icon-"]:before {
+  width: auto;
+}
+/* line 63, _modules/_tables.scss */
 .table.table-info {
   margin-bottom: 1rem;
 }
-/* line 56, _modules/_tables.scss */
+/* line 66, _modules/_tables.scss */
 .table.table-info td {
   white-space: normal;
 }
-/* line 61, _modules/_tables.scss */
+/* line 71, _modules/_tables.scss */
 .table.table-download {
   border: 0;
 }
-/* line 64, _modules/_tables.scss */
+/* line 74, _modules/_tables.scss */
 .table.table-download tbody tr {
   background: None;
 }
-/* line 72, _modules/_tables.scss */
+/* line 82, _modules/_tables.scss */
 .table.table-setop tbody tr {
   background-color: rgba(0, 0, 0, 0);
   border-top: 1px solid #e6e6e6;
 }
 
-/* line 80, _modules/_tables.scss */
+/* line 90, _modules/_tables.scss */
 .t_table_top {
   margin-top: 1rem;
   padding: .5rem 0;
@@ -1846,14 +1853,14 @@ input.valid:focus {
   font-weight: 300;
 }
 
-/* line 88, _modules/_tables.scss */
+/* line 98, _modules/_tables.scss */
 .t_cell_line_break {
   word-wrap: break-word;
   max-width: 15em;
 }
 
 /* IE has crummy support for table-cell overflow, so we need to apply this to the element in the cell instead */
-/* line 95, _modules/_tables.scss */
+/* line 105, _modules/_tables.scss */
 .t_cell_overflow {
   margin: 0;
   padding: 0;
@@ -1881,8 +1888,8 @@ input.valid:focus {
 
 /* line 13, _modules/_alerts.scss */
 .alert-error {
-  background: #fcebeb;
-  color: #dc322f;
+  background: #fbede9;
+  color: #dc502e;
 }
 
 /* line 1, _modules/_modals.scss */
@@ -2654,7 +2661,7 @@ aside .t_tabs__tab {
 
 /* line 149, _modules/_facets.scss */
 .t_impact_high {
-  color: #dc322f;
+  color: #dc502e;
 }
 
 /* line 152, _modules/_facets.scss */
@@ -3554,7 +3561,7 @@ ol p {
 
 /* line 167, styles.scss */
 .data-missing {
-  color: #dc322f;
+  color: #dc502e;
 }
 
 /* line 171, styles.scss */
